flakes/kube/manifests/immich.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-database
  name: immich-database
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-database
    spec:
      containers:
        - env:
            - name: POSTGRES_INITDB_ARGS
              value: --data-checksums
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-name
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-password
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-username
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
          name: immich-postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: immich-db
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: immich-db
          hostPath:
            path: /media/data-ssd/immich/db
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-database
  name: immich-database
  namespace: default
spec:
  ports:
    - name: "postgres"
      port: 5432
      targetPort: 5432
  selector:
    app: immich-database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-server
  name: immich-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - env:
            - name: TZ
              value: "America/Denver"
            - name: IMMICH_VERSION
              value: "v3.2.2"
            - name: DB_HOSTNAME
              value: "immich-database.default.svc.cluster.local"
            - name: UPLOAD_LOCATION
              value: "/uploads"
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-password
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-username
            - name: DB_DATABASE_NAME
              valueFrom:
                secretKeyRef:
                  name: immich
                  key: db-name
            - name: REDIS_HOSTNAME
              value: "immich-redis.default.svc.cluster.local"
          image: ghcr.io/immich-app/immich-server:v3.2.2
          name: immich-server
          ports:
            - containerPort: 2283
              protocol: TCP
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 500m
              memory: 1024Mi
            limits:
              gpu.intel.com/i915: "1"
              cpu: "1"
              memory: 8Gi
          volumeMounts:
            - mountPath: /data
              name: immich-data
            - mountPath: /uploads
              name: immich-uploads
      restartPolicy: Always
      volumes:
        - name: immich-data
          hostPath:
            path: /media/data_pool/immich/data
            type: DirectoryOrCreate
        - name: immich-uploads
          hostPath:
            path: /media/data-ssd/immich/uploads
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-server
  name: immich-server
  namespace: default
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 2283
  type: ClusterIP
  selector:
    app: immich-server
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-redis
  name: immich-redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - image: docker.io/valkey/valkey:8@sha256:81db6d39e1bba3b3ff32bd3a1b19a6d69690f94a3954ec131277b9a26b95b3aa
          livenessProbe:
            exec:
              command:
                - redis-cli ping || exit 1
          name: immich-redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: immich-redis
  name: immich-redis
  namespace: default
spec:
  ports:
    - name: "redis"
      port: 6379
      targetPort: 6379
  selector:
    app: immich-redis
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: immich
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: immich-gateway
  servers:
    - port:
        number: 80
        name: http-immich
        protocol: HTTP
      hosts:
        - images.heywoodlh.io
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https-immich
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: immich-tls
      hosts:
        - images.heywoodlh.io
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: immich-crowdsec
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-gateway
  action: CUSTOM
  provider:
    name: crowdsec
  rules:
    - to:
        - operation:
            ports:
              - "80"
              - "443"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: immich
  namespace: istio-system
spec:
  hosts:
    - images.heywoodlh.io
  gateways:
    - immich
  http:
    - timeout: 24h
      route:
        - destination:
            host: immich-server.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: immich-tailscale
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app.kubernetes.io/name: immich-tailscale-gateway
  servers:
    - port:
        number: 80
        name: http-immich-tailscale
        protocol: HTTP
      hosts:
        - immich.barn-banana.ts.net
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: immich-tailscale
  namespace: istio-system
spec:
  hosts:
    - immich.barn-banana.ts.net
  gateways:
    - immich-tailscale
  http:
    - timeout: 24h
      route:
        - destination:
            host: immich-server.default.svc.cluster.local
            port:
              number: 80
